--- a/count.html
+++ b/count.html
@@ -1,5 +1,7 @@
 <input type="submit" id="submit">
 
+
+ <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
  <script>
   var count=0;
    $(document).on('click','#submit',function(){
